Fixed slider issues on mobile devices #2167 #2161
- Slide is not aborted anymore on mobile
- Fixed an iOS specific issue were the page was sliding to the right/left in some cases while sliding

--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -142,6 +142,13 @@
     touch-action: none;
 }
 
+html.bubble-slider-dragging,
+body.bubble-slider-dragging {
+    touch-action: none;
+    overscroll-behavior: contain;
+    overflow: hidden;
+}
+
 /* When dragging, disable all touch actions to prevent conflicts */
 .is-dragging .bubble-range-slider,
 .is-dragging.slider-container {
